Fix overflow

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -67,6 +67,8 @@
 }
 
 .Home--TrackRecord {
+  overflow: hidden;
+
   @media (max-width: 800px) {
     .pull-left-skinny {
       margin: auto;
